--- a/Google Ad Demo/Base.lproj/Main.storyboard
+++ b/Google Ad Demo/Base.lproj/Main.storyboard
@@ -1,24 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dlN-0t-GQ0">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--News-->
+        <scene sceneID="tcb-7p-KX3">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="wJ1-pr-j5Q" customClass="NewsTableViewController" customModule="Google_Ad_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="303" estimatedRowHeight="-1" sectionHeaderHeight="22" estimatedSectionHeaderHeight="-1" sectionFooterHeight="22" estimatedSectionFooterHeight="-1" id="OxO-eb-Zg5">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="newscell" rowHeight="303" id="eMo-bO-zxI" customClass="NewsTableViewCell" customModule="Google_Ad_Demo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="303"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eMo-bO-zxI" id="xJU-l3-yyS">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="303"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jhQ-Ws-gqW">
+                                            <rect key="frame" x="27" y="11" width="339" height="197.66666666666666"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UYh-lG-CrK">
+                                            <rect key="frame" x="27" y="217.33333333333334" width="339" height="27.333333333333343"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ioY-Ks-8Bk">
+                                            <rect key="frame" x="27" y="252.66666666666663" width="40" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="49v-6j-HcW"/>
+                                                <constraint firstAttribute="height" constant="40" id="KjA-df-CI5"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RB0-jb-5Wz">
+                                            <rect key="frame" x="75" y="252.66666666666663" width="291" height="21"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
+                                            <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="an hour ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZ1-R8-QOK">
+                                            <rect key="frame" x="75" y="271.66666666666669" width="291" height="21"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="14"/>
+                                            <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="UYh-lG-CrK" firstAttribute="top" secondItem="jhQ-Ws-gqW" secondAttribute="bottom" constant="8.5" id="3se-7h-yac"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="RB0-jb-5Wz" secondAttribute="bottom" constant="18.5" id="4yc-IU-YBs"/>
+                                        <constraint firstItem="RB0-jb-5Wz" firstAttribute="leading" secondItem="ioY-Ks-8Bk" secondAttribute="trailing" constant="8" id="Bv7-Eb-6ci"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="PZ1-R8-QOK" secondAttribute="bottom" constant="-0.5" id="Dwt-Kv-XOE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="UYh-lG-CrK" secondAttribute="trailing" constant="7" id="Kgc-6V-KOO"/>
+                                        <constraint firstItem="jhQ-Ws-gqW" firstAttribute="leading" secondItem="xJU-l3-yyS" secondAttribute="leadingMargin" constant="7" id="L79-Lf-WIL"/>
+                                        <constraint firstItem="ioY-Ks-8Bk" firstAttribute="leading" secondItem="UYh-lG-CrK" secondAttribute="leading" id="Oxy-dI-2cE"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="RB0-jb-5Wz" secondAttribute="trailing" constant="7" id="XBs-PR-w0A"/>
+                                        <constraint firstItem="UYh-lG-CrK" firstAttribute="leading" secondItem="xJU-l3-yyS" secondAttribute="leadingMargin" constant="7" id="Xq4-0L-HyL"/>
+                                        <constraint firstItem="RB0-jb-5Wz" firstAttribute="top" secondItem="ioY-Ks-8Bk" secondAttribute="top" id="dk8-RB-HM6"/>
+                                        <constraint firstItem="PZ1-R8-QOK" firstAttribute="top" secondItem="RB0-jb-5Wz" secondAttribute="bottom" constant="-2" id="ftS-Kj-05W"/>
+                                        <constraint firstItem="PZ1-R8-QOK" firstAttribute="bottom" secondItem="ioY-Ks-8Bk" secondAttribute="bottom" id="iFq-hM-XZC"/>
+                                        <constraint firstItem="PZ1-R8-QOK" firstAttribute="top" secondItem="UYh-lG-CrK" secondAttribute="bottom" constant="27" id="na7-69-ysT"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="jhQ-Ws-gqW" secondAttribute="trailing" constant="7" id="rRA-Wd-Jf6"/>
+                                        <constraint firstItem="PZ1-R8-QOK" firstAttribute="leading" secondItem="RB0-jb-5Wz" secondAttribute="leading" id="sKY-2b-DDy"/>
+                                        <constraint firstItem="PZ1-R8-QOK" firstAttribute="trailing" secondItem="RB0-jb-5Wz" secondAttribute="trailing" id="sN9-lQ-0sJ"/>
+                                        <constraint firstItem="jhQ-Ws-gqW" firstAttribute="top" secondItem="xJU-l3-yyS" secondAttribute="topMargin" id="syu-bE-1du"/>
+                                        <constraint firstItem="ioY-Ks-8Bk" firstAttribute="top" secondItem="UYh-lG-CrK" secondAttribute="bottom" constant="8" id="zWu-6M-No9"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorImageView" destination="ioY-Ks-8Bk" id="0yT-jV-AR5"/>
+                                    <outlet property="postAuthor" destination="RB0-jb-5Wz" id="6m7-Lh-gsI"/>
+                                    <outlet property="postImageView" destination="jhQ-Ws-gqW" id="Ecg-kA-udt"/>
+                                    <outlet property="postTitle" destination="UYh-lG-CrK" id="wzF-g8-GGe"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="wJ1-pr-j5Q" id="R8l-tL-rQU"/>
+                            <outlet property="delegate" destination="wJ1-pr-j5Q" id="d5e-Wj-kAI"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="News" id="VTq-I9-x8z"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bev-dY-DTJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="941.22137404580144" y="-89.436619718309871"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uqd-j4-pdz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dlN-0t-GQ0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gc8-c5-4nF">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wJ1-pr-j5Q" kind="relationship" relationship="rootViewController" id="uMU-0A-HRy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nPD-ds-UYf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="14.503816793893129" y="-89.436619718309871"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
